Add support for refresh token grant + plain token requests/responses
* Add refresh token controller
* Add access token scope repository
* Add a type check in authorization server (plain vs bearer)
* Add an access token check in the resource server
* Add a plain token validator class
* Add a plain refresh token grant class
* Add a custom Psr7 response class for plain tokens
* Add a sandbox for the refresh_token grant
* Import assets to repo for examples
* Break down the file structure for examples
* Catch PHP Errors
* Update docs and README
